# radiomics_scot_heart

./: 00_calc_radiomics_perLesion.R  01_Filt_col.R  02_Format_data_distmat.R  03_Dist_matrix.R  04_WGCNA.R  05_Patient_db.R  06A_Cox.R  06B_Cox_format.R  08_Multivariate_Cox.R  09_Correlation_plots.R  10_Table1.R  7_ROC_KM_curves.R  Cox_statistics.py  README.md  pyproject.toml  survival_analysis.py
