[tool.poetry]
name = "survival"
version = "0.1.0"
description = ""
authors = ["Marton_Kolossvary <marton.kolossvary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-survival = "^0.21.0"
matplotlib = "^3.7.1"
lifelines = "^0.27.7"
setuptools = "^68.0.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
